# kage

./: .coverage  CHANGES.md  LICENSE  README.md  pyproject.toml
docs/: architecture.html  kage_dataset_event.csv  kage_job_run.csv  kage_task_run.csv
examples/: agentic_async_parallel.py  agentic_langchain.py  agentic_quickstart.py  airflow_cases.py  airflow_quickstart.py  dbt_cases.py  dbt_quickstart.py  decorator_quickstart.py  kage_analytics.py  quickstart.py  spark_declarative_cases.py  spark_declarative_quickstart.py
examples/kage-logs/pyspark/event_type=dataset_event/dt=2026-02-23/: part-36410394-000.jsonl  part-421de6bb-000.jsonl  (+2 more)
kage/: __init__.py  agentic.py  core.py  decorators.py  schemas.py  transports.py
kage.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
kage/adapters/: __init__.py  databricks.py
kage/integrations/: __init__.py  airflow.py  dbt.py  langchain.py  spark_declarative.py
kage/utils/: databricks_analytics.py
presentation/: generate_pptx.py  kage_5min.pptx
presentation/slides/01_title/: pointers.md  slide.md
presentation/slides/02_problem/: pointers.md  slide.md
presentation/slides/03_solution/: pointers.md  slide.md
presentation/slides/04_declarative/: pointers.md  slide.md
presentation/slides/05_dlt/: pointers.md  slide.md
presentation/slides/06_analytics/: pointers.md  slide.md
presentation/slides/07_backup_databricks/: pointers.md  slide.md
tests/: test_agentic.py  test_airflow_integration.py  test_core.py  test_dbt_integration.py  test_decorators.py  test_langchain_integration.py  test_spark_declarative.py
(+6 files in other folders)
