[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kage"
version = "1.1.0"
description = "KAGE: Universal Pipeline Observability (KAGE-PROPRIETARY-2026)"
authors = [{name = "Mayur Sonawane"}]
license = {text = "KAGE-PROPRIETARY-2026"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "python-dateutil>=2.8"
]

[project.optional-dependencies]
test = ["pytest>=7.0", "pytest-cov>=4.0"]
dev = ["black", "isort", "mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
cov_source = "kage"
cov_fail_under = 80
